ImpressCMS ChangeLog
=== ImpressCMS 1.2 RC 1 ===
Release date:
Revision:

'''Improved'''
* #333: imProfile: added information on upload_max_size to upload config value descriptions | ticket from addons (Phoenyx)
* #322: imProfile: added "no content" messages to all content views | ticket from addons (Phoenyx)

'''Fixed'''
* #341: imProfile: don't show profile for inactive users | tickets from addons (Phoenyx)
* #776: fixed some issues with the search functionallity (Phoenyx)
* #621: fixed layout issue with social bookmark block and removed addto library (Phoenyx)
* #275: imProfile: restored friendship handling | ticket from addons (Phoenyx)
* #327: imProfile: fixed block My Friends | ticket from addons (Phoenyx)
* #325: imProfile: only accepted friendships are on the index view now | ticket from addons (Phoenyx)
* #347: imProfile: videos can now be deleted from the frontend | ticket from addons (Phoenyx)
* #252: imProfile: fixed display issue in user adminstration | ticket from addons (Phoenyx)
* #290: imProfile: added missing field types rank and theme to fields class | ticket from addons (Phoenyx)
* #320: imProfile: OpenID is editable now | ticket from addons (Phoenyx)
* #273: imProfile: fixed several wrong column value links in CP view | tickets from addons (Phoenyx)

=== Impresscms 1.2 Beta ===
Release date: 5 Sep 2009
Revision: 9336

'''Added'''
* Added plugins/autotasks folder for storring autotasks systems (currently there is at.php, cron.php and internal.php handlers) (mekdrop)
* Added plugins/sourceeditors folder for Code Sources Editors (mekdrop)
* Added editarea source editor (mekdrop)
* Added autotasks preload (mekdrop)
* Added class/autotasks folder with base classes and interfaces for autotasks (iautotasksystem.php and icmsautotaskssystem.php) (mekdrop)
* Edited xoopseditor.inc.php and xoopseditor.php files in class folder. Added editor type support. For Example: if you specify source editor type, then source editor will be used. (mekdrop)